infer/tests/codetoanalyze/cpp/errors/nestedoperators/var_decl_inside_if.cpp
../../frontend/nestedoperators/var_decl_inside_if.cpp